samples/_failures_safe/1761656123_ebc9bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43c7c0f2.c: In function ‘main’:
./samples/SAFE/__tmp_43c7c0f2.c:151:9: error: expected expression at end of input
  151 |         else if (strcmp(entries[i].level, "WARN") == 0)
      |         ^~~~
./samples/SAFE/__tmp_43c7c0f2.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_43c7c0f2.c:151:9: error: expected declaration or statement at end of input
